--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bevy = { version = "0.14.0", features = [ "serialize" ] }
 ego-tree = "0.10.0"
 scraper = "0.22.0"
+serde = "1.0.217"
+serde_json = "1.0.138"
 thiserror = "2.0.11"
